--- a/note.html
+++ b/note.html
@@ -9,6 +9,9 @@
                 width: 100%;
                 height: 100px;
             }
+            pre {
+                text-align: center;
+            }
         </style>
         <script src="https://play.workadventu.re/iframe_api.js"></script>
         <script type="module" src="src/note.ts"></script>
